--- a/flixster_project/src/MovieCard.css
+++ b/flixster_project/src/MovieCard.css
@@ -9,8 +9,9 @@
 
 .movieImage img {
     height: 350px;
+    width:250px;
     border-radius: 5px;
-    border: 2px solid black;
+    border: 2px solid violet;
 
 }
 
@@ -22,8 +23,3 @@
     max-width: 100%;
     word-wrap: break-word;
 }
-/*
-.movieInfo h3{
-    max-width: 100%;
-    word-wrap: break-word;
-} */
