--- a/flixster_project/src/ModalCard.css
+++ b/flixster_project/src/ModalCard.css
@@ -6,13 +6,14 @@
     position:fixed;
     z-index:1;
     border-radius: 5px;
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px 0 rgba(213, 158, 158, 0.5);
     max-width: 80%;
     background-color:rgb(234, 215, 236);
     justify-content: center;
     align-items: center;
     border:solid 1px black;
     transform: translate(-50%, -50%);
+    height: 100;
 
 }
 
