--- a/flixster_project/src/ModalCard.css
+++ b/flixster_project/src/ModalCard.css
@@ -1,19 +1,22 @@
 .modal{
     display: flex;
-    z-index:1;
     left:50%;
     top:50%;
     position:fixed;
-    z-index:1;
+    z-index:1000;
     border-radius: 5px;
-    box-shadow: 0 0 10px 0 rgba(213, 158, 158, 0.5);
+    box-shadow: 0 0 10px 0 rgba(22, 3, 3, 0.5);
     max-width: 80%;
-    background-color:rgb(234, 215, 236);
+    background-color:rgb(215, 219, 236);
     justify-content: center;
     align-items: center;
     border:solid 1px black;
     transform: translate(-50%, -50%);
     height: 100;
+    backdrop-filter: blur(30px);
+    box-shadow: deepskyblue;
+
+
 
 }
 
@@ -30,4 +33,10 @@
 .modalContent img{
     width: 300px;
     height: 350px;
+}
+
+
+app.modal .modalContent{
+    filter:blur(5px);
+    -webkit-filter: blur(5px);
 }
