--- a/flixster_project/src/ModalCard.css
+++ b/flixster_project/src/ModalCard.css
@@ -1,23 +1,17 @@
-.modal{
+.modalOverlay{
     display: flex;
     left:50%;
     top:50%;
     position:fixed;
     z-index:1000;
     border-radius: 5px;
-    box-shadow: 0 0 10px 0 rgba(22, 3, 3, 0.5);
-    max-width: 80%;
-    background-color:rgb(215, 219, 236);
     justify-content: center;
     align-items: center;
-    border:solid 1px black;
     transform: translate(-50%, -50%);
     height: 100;
-    backdrop-filter: blur(30px);
-    box-shadow: deepskyblue;
-
-
-
+    backdrop-filter: blur(5px);
+    height: 100%;
+    width: 100%;
 }
 
 .modalContent{
@@ -26,17 +20,15 @@
     max-height:90vh;
     border-radius:10px;
     overflow-y: auto;
-    width: 80%;
-
+    width: 70vh;
+    box-shadow: rgb(0, 251, 255);
+    z-index: 100;
+    background-color: white;
+    border:solid 1px black;
+    box-shadow: 0 0 10px 0 rgba(22, 3, 3, 0.5);
 }
 
 .modalContent img{
     width: 300px;
     height: 350px;
-}
-
-
-app.modal .modalContent{
-    filter:blur(5px);
-    -webkit-filter: blur(5px);
 }
