--- a/flixster_project/src/MovieList.css
+++ b/flixster_project/src/MovieList.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-   
-    gap:25px;
+    justify-content: center;
+    gap:15px;
 
 }
