fixed some indentation and whitespace

--- a/flixster_project/src/MovieCard.css
+++ b/flixster_project/src/MovieCard.css
@@ -6,13 +6,14 @@
     flex: 0 0 16%;
     width:100%;
     overflow: hidden;
+
 }
 
 .movieImage img {
     height: 350px;
     width:250px;
     border-radius: 5px;
-    border: 2px solid violet;
+    border: 2px solid rgb(7, 51, 56);
 
 }
 
@@ -24,12 +25,14 @@
     max-width: 100%;
     word-wrap: break-word;
     margin:2px;
+    font-style: normal white;
 }
 
 .movieIcons{
     display: flex;
     flex-direction: row;
-    gap:180px;
-    padding:15px;
+    gap:150px;
+    padding:10px;
+    font-size: 15px;
 
 }
