--- a/flixster_project/src/ModalCard.css
+++ b/flixster_project/src/ModalCard.css
@@ -4,7 +4,7 @@
     top:50%;
     position:fixed;
     z-index:1000;
-    border-radius: 5px;
+    border-radius: 8px;
     justify-content: center;
     align-items: center;
     transform: translate(-50%, -50%);
@@ -12,6 +12,7 @@
     backdrop-filter: blur(5px);
     height: 100%;
     width: 100%;
+    border: 4px solid rgb(0, 251, 255);
 }
 
 .modalContent{
@@ -23,9 +24,11 @@
     width: 70vh;
     box-shadow: rgb(0, 251, 255);
     z-index: 100;
-    background-color: white;
+    background-color: rgb(100, 108, 255);
     border:solid 1px black;
     box-shadow: 0 0 10px 0 rgba(22, 3, 3, 0.5);
+    color:white;
+    border: 4px solid rgb(221, 220, 241);
 }
 
 .modalContent img{
