--- a/flixster_project/src/MovieList.css
+++ b/flixster_project/src/MovieList.css
@@ -4,5 +4,12 @@
     flex-wrap: wrap;
     justify-content: center;
     gap:15px;
+width:100%;
+    min-height: 70vh;
+    padding: 20px;
+}
 
+.loadMore{
+    padding: 15px;
+    margin:5px;
 }
