--- a/flixster_project/src/WatchedList.css
+++ b/flixster_project/src/WatchedList.css
@@ -5,6 +5,10 @@
     justify-content: center;
     gap:15px;
     width:100%;
-    height:100%;
 
+}
+
+#root{
+    min-height: 70vh;
+    padding: 20px;
 }
