--- a/flixster_project/src/LikedList.css
+++ b/flixster_project/src/LikedList.css
@@ -1,4 +1,4 @@
-.LikedList{
+.likedList{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -7,5 +7,10 @@
     width:100%;
     min-height: 70vh;
     padding: 20px;
+}
 
+h3{
+    font-size: 1.5rem;
+    color: white;
+    text-align: justify;
 }
