--- a/flixster_project/src/WatchedList.css
+++ b/flixster_project/src/WatchedList.css
@@ -5,10 +5,12 @@
     justify-content: center;
     gap:15px;
     width:100%;
-
-}
-
-#root{
     min-height: 70vh;
     padding: 20px;
+}
+
+h3{
+    font-size: 1.5rem;
+    color: white;
+    text-align: center;
 }
