--- a/flixster_project/src/searchForm.css
+++ b/flixster_project/src/searchForm.css
@@ -1,10 +1,11 @@
-
 .search-form {
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
+    margin: 20px auto;
     padding: 20px;
     gap: 10px;
+    width:80%;
+    align-items: center;
   }
 
   .search-input {
@@ -34,12 +35,23 @@
 
   }
 
+
   .search-button:hover {
     background-color: #2980b9;
     box-shadow: 0 4px 8px rgba(0,0,0,0.3);
   }
 
   .search-button:active {
+    background-color: #2471a3;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  }
+
+  .clear-button:hover {
+    background-color: #2980b9;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  }
+
+  .clear-button:active {
     background-color: #2471a3;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   }
