--- a/flixster_project/src/App.css
+++ b/flixster_project/src/App.css
@@ -1,13 +1,54 @@
 #root {
   display: flex;
-  max-width: 100vw;
-  margin: 0 auto;
-  padding: 2rem;
+  flex-direction: column;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   text-align: center;
   background-color: rgb(34, 8, 94);
 }
 
-.logo {
+.App {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.App_header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.banner {
+  background-color: #6060c0;
+  width: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 55px;
+}
+
+.banner h1 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+  text-align: center;
+}
+
+.banner .sidebar {
+  margin-left: auto;
+}
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -41,7 +82,7 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
 
 .blurred{
   filter: blur(5px);
@@ -56,4 +97,6 @@
 
 h1, h2{
   color: white;
+  text-align: center;
+  left:50%;
 }
