--- a/flixster_project/src/MovieList.css
+++ b/flixster_project/src/MovieList.css
@@ -1,10 +1,10 @@
-.MovieList{
+.movieList  {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     gap:15px;
-width:100%;
+    width:100%;
     min-height: 70vh;
     padding: 20px;
 }
