--- a/flixster_project/src/index.css
+++ b/flixster_project/src/index.css
@@ -16,7 +16,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #a5a9ff;
   text-decoration: inherit;
 }
 a:hover {
@@ -46,7 +46,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #a5a9ff;
 }
 button:focus,
 button:focus-visible {
