--- a/flixster_project/src/ModalCard.css
+++ b/flixster_project/src/ModalCard.css
@@ -24,7 +24,7 @@
     width: 70vh;
     box-shadow: rgb(0, 251, 255);
     z-index: 100;
-    background-color: rgb(100, 108, 255);
+    background-color: #5050c0;
     border:solid 1px black;
     box-shadow: 0 0 10px 0 rgba(22, 3, 3, 0.5);
     color:white;
