--- a/flixster_project/src/MovieCard.css
+++ b/flixster_project/src/MovieCard.css
@@ -28,7 +28,10 @@
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
-
+.moviecard-title {
+    font-size: 20px;
+    font-weight: 800;
+}
 .movieIcons p.likeButton:hover,
 .movieIcons p.watchedButton:hover {
     background-color: rgba(99, 223, 232, 0.5);
