--- a/flixster_project/src/ModalCard.css
+++ b/flixster_project/src/ModalCard.css
@@ -9,7 +9,8 @@
     align-items: center;
     transform: translate(-50%, -50%);
     height: 100;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
+    background: rgba(0, 0 , 0 , 0.6);
     height: 100%;
     width: 100%;
     border: 4px solid rgb(0, 251, 255);
@@ -26,7 +27,7 @@
     z-index: 100;
     background-color: #5050c0;
     border:solid 1px black;
-    box-shadow: 0 0 10px 0 rgba(22, 3, 3, 0.5);
+    box-shadow: 0px 0px 10px rgba(7, 0, 0, 0.5);
     color:white;
     border: 4px solid rgb(221, 220, 241);
 }
