--- a/flixster_project/src/MovieCard.css
+++ b/flixster_project/src/MovieCard.css
@@ -9,7 +9,7 @@
     margin: 10px;
     overflow: hidden;
     background-blend-mode: darken;
-    background-color: #6060c0;
+    background-color: rgb(73, 73, 182);
     transition: all 0.3s ease;
     cursor: pointer;
 }
@@ -25,7 +25,7 @@
 .MovieCard:active {
     background-color: rgb(76, 76, 170);
     transform: translateY(0);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 1);
 }
 
 .moviecard-title {
