--- a/flixster_project/src/SortMovies.css
+++ b/flixster_project/src/SortMovies.css
@@ -1,14 +1,14 @@
 select {
-    font-size: 15px;
-    font-family: 'Arial', sans-serif;
-    padding: 3px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    cursor: pointer;
-    outline: none;
-  }
+  font-size: 15px;
+  font-family: "Arial", sans-serif;
+  padding: 3px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  cursor: pointer;
+  outline: none;
+}
 
-  select:hover {
-    border-color: #888;
-  }
+select:hover {
+  border-color: #888;
+}
