--- a/flixster_project/src/MovieCard.css
+++ b/flixster_project/src/MovieCard.css
@@ -12,7 +12,6 @@
   background-color: rgb(73, 73, 182);
   transition: all 0.3s ease;
   cursor: pointer;
-  /* width */
 }
 
 .MovieCard:hover {
@@ -30,6 +29,7 @@
 .moviecard-title {
   font-size: 20px;
   font-weight: 800;
+  justify-content: center;
 }
 .movieIcons p.likeButton:hover,
 .movieIcons p.watchedButton:hover {
@@ -49,7 +49,7 @@
 }
 
 .movieInfo {
-  width: 250px;
+  width: 70%;
   display: flex;
   flex-direction: column;
   flex-flow: column wrap;
@@ -59,6 +59,8 @@
   color: #ffffff;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  position: relative;
 }
 
 .movieIcons {
